# local-ai-chat

./: .gitignore  LICENSE  Notes.txt  README.md  pyproject.toml
.github/workflows/: python-tests.yml
backend/: requirements.txt  start.py
backend/app/: main.py
backend/app/models/: chat_models.py
backend/app/services/: conversation_manager.py  document_processor.py  model_manager.py
backend/services/: documents_processor.py  model_manager.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
models/: download_models.py
scripts/: install.sh  start.sh
tests/: test_document_processor.py  test_model_manager.py
