```toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-ai-chat"
version = "1.0.0"
description = "A completely offline ChatGPT-like application that runs entirely on your laptop"
authors = [
    {name = "LocalAI Chat Team", email = "hello@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["ai", "chat", "offline", "llm", "local"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "llama-cpp-python>=0.2.23",
    "PyPDF2>=3.0.1",
    "pytesseract>=0.3.10",
    "Pillow>=10.1.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.1",
]
